...
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo_v_slot" />

            <ImageButton
                android:id="@+id/settingsButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical|end"
                android:background="@android:color/transparent"
                android:contentDescription="@string/settings"
                android:scaleType="fitCenter"
...
