...
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="6dp"
                                android:minHeight="60dp">

                                <ImageButton
                                    android:id="@+id/noticesButton"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@android:color/transparent"
                                    android:contentDescription="@string/third_party_notices_action"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/btn_privacy_selector" />
...
